Fixed footer and gap issue

--- a/resources/scss/styles.scss
+++ b/resources/scss/styles.scss
@@ -61,7 +61,6 @@ a {
   display: grid;
   grid-template-columns: 1fr 4fr 1fr;
   grid-auto-rows: 90px minmax(200px, auto);
-  // grid-gap; 20px;
 }
 
 .grid > div {
@@ -161,6 +160,13 @@ a {
 @media (max-width: 1800px) {
   .contentlogo-mobile {
     width: 75px;
+    margin: 0;
+  }
+}
+
+@media (max-width: 2700px) {
+  .contentlogo-mobile {
+    width: 80px;
     margin: 0;
   }
 }
@@ -274,9 +280,8 @@ body {
 .food-wrapper {
   height: 100%;
   display: grid;
-  grid-gap: 3px;
   grid-template-columns: repeat(12, 1fr);
-  grid-template-rows: 60px auto 100px;
+  grid-template-rows: 60px auto;
   grid-template-areas:
     'h h h h h h h h h h h h'
     'm m m m m m m m m m m m'
@@ -318,10 +323,9 @@ body {
   }
   .food-wrapper {
     grid-template-columns: repeat(12, 1fr);
-    grid-template-rows: 60px 60px auto 60px;
+    grid-template-rows: 60px auto;
     grid-template-areas:
       'h h h h h h h h h h h h'
-      'sh sh sh sh sh sh sh sh sh sh sh sh'
       'm m m m m m m m m m m m'
       'f f f f f f f f f f f f';
   }
